--- a/css/important_links.css
+++ b/css/important_links.css
@@ -3,3 +3,13 @@
         background-color: white;
         color: black;
 }
+
+@media screen and (min-width: 480px) {
+
+.links{
+        min-width:400px;
+        }
+.links .form{
+        min-width:400px; 
+}
+}
